# python-poetry-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py  settings.py  utils.py
