[tool.poetry]
name = "python-poetry-template"
version = "0.1.0"
description = ""
authors = ["ppippi <wjdqlsdlsp@naver.com>"]
readme = "README.md"
packages = [
       { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
