[tool.poetry]
name = "python-poetry-template"
version = "0.1.0"
description = "python-poetry-template"
authors = ["ppippi <wjdqlsdlsp@naver.com>"]
readme = "README.md"
packages = [
       { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
rich = "^13.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "C"]
ignore = ["D203", "D213", "D400", "D415"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
ignore_missing_imports = true
package_root = "src"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
